--- a/koreacovid.html
+++ b/koreacovid.html
@@ -513,6 +513,7 @@ Females dead is 36 percent and males dead is 64 percent.</p>
 </div>
 <div id="conclusions" class="section level2">
 <h2>Conclusions</h2>
+<p>According to the percent bar chart, we can see that more females have a higher chance at being alive than males and have a lower chance.</p>
 </div>
 </div>
 
